src/components/Home/OutcomesDiagram.scss
.outcomes-diagram {
  padding: 120px 0;
  .diagram {

    .circle {
      width: 650px;
      height: 650px;
      border-radius: 50%;
      border: 3px $tertiary solid;
      margin: 0 auto;
      position: relative;

      @include media-down(mobile) {
        width: calc(100vw - 40px);
        height: calc(100vw - 40px);
      }


      .outcome-buttons {
        .outcome-selector {
          position: absolute;
          padding: 20px;
          background-color: $white;

          &:nth-child(1) {
            top: 0;
            left: 50%;
            transform: translateY(-50%) translateX(-50%);
          }
          &:nth-child(2) {
            top: 50%;
            left: auto;
            right: 0;
            transform: translateY(-50%) translateX(50%);
          }
          &:nth-child(3) {
            bottom: 0;
            left: 50%;
            transform: translateY(50%) translateX(-50%);
          }
          &:nth-child(4) {
            top: 50%;
            left: 0;
            transform: translateY(-50%) translateX(-50%);
          }

          .icon-container {
            width: 65px;
            height: 65px;
            border: 3px solid $secondary;
            background-color: $white;
            transition: background-color 0.3s ease;
            border-radius: 50%;
            position: relative;
            z-index: 1;

            &:before {
              @include center-align(absolute);
              content: '';
              height: 140%;
              width: 140%;
              border: 2px dashed $secondary;
              border-radius: 50%;
              opacity: 0;
              transition: opacity 0.5s ease;
              will-change: transform;
            }
          }

          &.active {
            .icon-container {
              background-color: $secondary;

              .icon {
                svg {
                  fill: $white;
                }
              }

              &:before {
                opacity: 1;
              }
            }

            &:hover {
              cursor: default;

              .icon-container {
                &:before {
                  animation: none;
                }
              }
            }
          }

          &:hover {
            .icon-container {
              &:before {
                opacity: 1;
                animation: rotate 5s infinite;
                animation-timing-function: linear;
                transform-origin: 0 0;

                @keyframes rotate {
                  from {
                    transform: rotate(0deg) translateX(-50%) translateY(-50%);
                  }
                  to {
                    transform: rotate(360deg) translateX(-50%) translateY(-50%);
                  }
                }
              }
            }
          }

          .icon {
            @include center-align(absolute);
            width: 50%;
            height: 50%;

            svg {
              @include center-align(absolute);
              height: 100%;
              width: 100%;
              fill: $secondary;
              transition: fill 0.3s ease;
            }
          }
        }
      }

      .outcome-illustration {
        @include center-align(absolute);
        width: 60%;
        height: 60%;

        svg {
          width: 100%;
          height: 100%;
        }
      }

      .outcome-elaboration {
        position: absolute;
        top: auto;
        left: auto;
        bottom: 0;
        right: 0;
        width: 55%;
        max-width: 400px;
        background-color: $white;
        transform: translateX(50%);
        padding: 20px;

        .title {
          @include h2();
          margin-bottom: 20px;
        }
      }
    }
  }
}

